# Airbnb_Berlin_Price_predic

./: .gitignore  Airbnb_Berlin_Price_Predic_.ipynb  Airbnb_Berlin_Price_Predict_EDA.ipynb  Airbnb_Berlin_Price_Predict_Prep.ipynb  main.ipynb  main.py  pyproject.toml
