[tool.poetry]
name = "airbnb-berlin-price-predic"
version = "0.1.0"
description = ""
authors = ["hajyhia <shehab.hajyhia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
panda = "^0.3.1"
seaborn = "^0.13.2"
matplotlib = "^3.10.1"
numpy = "^2.2.3"
pandas = "^2.2.3"
jupyter = "^1.1.1"
missingno = "^0.5.2"
geopy = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
